# mini_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  cli.py  docker-compose.yml  pyproject.toml  requirements.txt  task.txt
agent/: config.py  context.py  llm.py  naming.py  parser.py  prompts.py  runtime.py  session.py  trace.py
agent/memory/: extractor.py  manager.py  vector_store.py
agent/tools/: base.py  calculator.py  registry.py
demo/: demo_weather_todo.py
docs/: ARCHITECTURE_QA.md  PROMPTS_LOG.md
docs/superpowers/plans/: 2026-07-21-memory-stores.md  2026-07-21-mini-agent-implementation.md
docs/superpowers/specs/: 2026-07-21-mini-agent-design.md
starry_code/: config.py  context.py  prompts.py  runtime.py
starry_code/memory/: embeddings.py  extractor.py  manager.py  short_term.py  vector_store.py
starry_code/tools/: base.py  registry.py  search.py  todo.py  weather.py
tests/: test_calculator.py  test_cli.py  test_config.py  test_context.py  test_integration.py  test_launcher.py  test_llm.py  test_memory_manager.py  test_memory_stores.py  test_naming.py  test_parser.py  test_registry.py  test_runtime.py  test_search.py  test_session.py  test_todo.py  test_trace.py  test_weather.py
